--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,12 +1,14 @@
 
 \thispagestyle{empty}
 
+\newcommand{\dolgozatcim}{Exploring Large Language Models' Capabilities in Software Engineering}
+
 \begin{center}
 %	\vfill
 	\vspace*{0.25cm}
 	
 	\begin{spacing}{2}
-		{\Huge \textbf{Exploring Large Language Models' Capabilities in Software Engineering}}
+		{\Huge \textbf{\dolgozatcim}}
 	\end{spacing}
 	
 	\vspace*{2cm}
