Make thesis points reusable

--- a/main.tex
+++ b/main.tex
@@ -94,6 +94,11 @@ headsep=1cm
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
+
+\newcommand{\thesispointone}{LLM comparison requires a detailed methodology.}
+\newcommand{\thesispointtwo}{Unpopular datasets provide perfect material for LLM hyper-parameter investigation.}
+\newcommand{\thesispointthree}{LLMs cannot properly replace human developers in vulnerability fixing on real-world projects.}
+
 \makeglossaries
 
 \begin{document}
