--- a/main.tex
+++ b/main.tex
@@ -95,9 +95,9 @@ headsep=1cm
 %----------------------------------------------------------------------------------------
 
 
-\newcommand{\thesispointone}{LLM comparison requires a detailed methodology.}
-\newcommand{\thesispointtwo}{Unpopular datasets provide perfect material for LLM hyper-parameter investigation.}
-\newcommand{\thesispointthree}{LLMs cannot properly replace human developers in vulnerability fixing on real-world projects.}
+\newcommand{\thesispointone}{LLM comparison requires a detailed methodology}
+\newcommand{\thesispointtwo}{Unpopular datasets provide perfect material for LLM hyper-parameter investigation}
+\newcommand{\thesispointthree}{LLMs cannot properly replace human developers in vulnerability fixing on real-world projects}
 
 \makeglossaries
 
