--- a/main.tex
+++ b/main.tex
@@ -96,8 +96,14 @@ headsep=1cm
 
 
 \newcommand{\thesispointone}{LLM comparison requires a detailed methodology}
-\newcommand{\thesispointtwo}{Unpopular datasets provide perfect material for LLM hyper-parameter investigation}
+\newcommand{\thesispointtwo}{Lesser known datasets provide perfect material for LLM hyper-parameter investigation}
 \newcommand{\thesispointthree}{LLMs cannot properly replace human developers in vulnerability fixing on real-world projects}
+
+\newcommand{\thesispointonehu}{Nyelvi modellek összehasonlítása részletes módszertant igényel}
+\newcommand{\thesispointtwohu}{A kevésbé ismert adathalmazok tökéletesek a nyelvi modellek hiperparamétereinek vizsgálatára}
+\newcommand{\thesispointthreehu}{A nyelvi modellek nem tudják teljesen helyettesíteni az embert az automatikus sérülékenység javításban.}
+
+\renewcommand{\chapterautorefname}{Chapter}
 
 \makeglossaries
 
