--- a/main.tex
+++ b/main.tex
@@ -101,7 +101,7 @@ headsep=1cm
 
 \newcommand{\thesispointonehu}{Nyelvi modellek összehasonlítása részletes módszertant igényel}
 \newcommand{\thesispointtwohu}{A kevésbé ismert adathalmazok tökéletesek a nyelvi modellek hiperparamétereinek vizsgálatára}
-\newcommand{\thesispointthreehu}{A nyelvi modellek nem tudják teljesen helyettesíteni az embert az automatikus sérülékenység javításban.}
+\newcommand{\thesispointthreehu}{A nyelvi modellek nem tudják teljesen helyettesíteni az embert az automatikus sérülékenység javításban}
 
 \renewcommand{\chapterautorefname}{Chapter}
 
