--- a/main.tex
+++ b/main.tex
@@ -95,9 +95,9 @@ headsep=1cm
 %----------------------------------------------------------------------------------------
 
 
-\newcommand{\thesispointone}{LLM comparison requires a detailed methodology}
+\newcommand{\thesispointone}{A methodology and case study for code synthesis evaluation of LLMs}
 \newcommand{\thesispointtwo}{Lesser known datasets provide perfect material for LLM hyper-parameter investigation}
-\newcommand{\thesispointthree}{LLMs cannot properly replace human developers in vulnerability fixing on real-world projects}
+\newcommand{\thesispointthree}{State-of-the-art LLM can fix around a third of real-world vulnerabilities}
 
 \newcommand{\thesispointonehu}{Nyelvi modellek összehasonlítása részletes módszertant igényel}
 \newcommand{\thesispointtwohu}{A kevésbé ismert adathalmazok tökéletesek a nyelvi modellek hiperparamétereinek vizsgálatára}
