--- a/titlepage.tex
+++ b/titlepage.tex
@@ -22,7 +22,7 @@
 	
 	\vspace{0.25cm}
 	
-	{\Large Supervisors: \\István Siket, PhD\\Ferenc Rudolf, PhD}
+	{\Large Supervisors: \\ \vspace{0.5em} István Siket, PhD\\ \vspace*{1em}Ferenc Rudolf, PhD}
 	
 %	\vspace{2cm}
 	\vfill
