--- a/ack.tex
+++ b/ack.tex
@@ -1,5 +1,6 @@
 \chapter*{Acknowledgments}
 \markboth{}{}
 
-First of all, I would like to thank my supervisor, Firstname Lastname, for directing my PhD studies. I would also like to thank my colleagues and friends who helped me to realize the results presented here and to enjoy the period of my studies. 
-Last, but not least, I wish to thank my wife and family for their constant love and support. 
+First of all, I would like to thank my supervisors, István Siket and Rudolf Ferenc, for directing my PhD studies.
+I would also like to thank my colleagues and friends who helped me to realize the results presented here and to enjoy the period of my studies. 
+Last, but not least, I wish to thank my family for their constant love and support.
