Add booklet. TODO: rephrase thesis points

--- a/main.tex
+++ b/main.tex
@@ -94,13 +94,7 @@ headsep=1cm
 %----------------------------------------------------------------------------------------
 
 
-\newcommand{\thesispointone}{A methodology and case study for code synthesis evaluation of LLMs}
-\newcommand{\thesispointtwo}{Lesser known datasets provide perfect material for LLM hyper-parameter investigation}
-\newcommand{\thesispointthree}{State-of-the-art LLM can fix around a third of real-world vulnerabilities}
-
-\newcommand{\thesispointonehu}{Nyelvi modellek összehasonlítása részletes módszertant igényel}
-\newcommand{\thesispointtwohu}{A kevésbé ismert adathalmazok tökéletesek a nyelvi modellek hiperparamétereinek vizsgálatára}
-\newcommand{\thesispointthreehu}{A nyelvi modellek nem tudják teljesen helyettesíteni az embert az automatikus sérülékenység javításban}
+\input{thesis_point_definitions}
 
 \renewcommand{\chapterautorefname}{Chapter}
 
