Change thesis points

--- a/thesis_point_definitions.tex
+++ b/thesis_point_definitions.tex
@@ -1,7 +1,7 @@
 \newcommand{\thesispointone}{A methodology and case study for code synthesis evaluation of LLMs}
-\newcommand{\thesispointtwo}{Lesser known datasets provide perfect material for LLM hyper-parameter investigation}
-\newcommand{\thesispointthree}{State-of-the-art LLM can fix around a third of real-world vulnerabilities}
+\newcommand{\thesispointtwo}{A program synthesis dataset for LLM temperature analysis}
+\newcommand{\thesispointthree}{GPT-4 assessment in real-world software vulnerabilities fixing}
 
-\newcommand{\thesispointonehu}{Nyelvi modellek összehasonlítása részletes módszertant igényel}
-\newcommand{\thesispointtwohu}{A kevésbé ismert adathalmazok tökéletesek a nyelvi modellek hiperparamétereinek vizsgálatára}
-\newcommand{\thesispointthreehu}{A nyelvi modellek nem tudják teljesen helyettesíteni az embert az automatikus sérülékenység javításban}
+\newcommand{\thesispointonehu}{Módszertan és esettanulmány a nagy nyelvi modellek kódszintézis-értékeléséhez}
+\newcommand{\thesispointtwohu}{Programszintézis adathalmaz a nagy nyelvi modellek temperature elemzéséhez}
+\newcommand{\thesispointthreehu}{A GPT-4 értékelése valós szoftversérülékenységek javításában}
